# GeometryContest

./: .editorconfig  .gitignore  CMakeLists.txt  NWERC09Argafal.cpp  NWERC09Argafal.h  NWERC09Jaap.cpp  NWERC09Jaap.h  README.md  config.gcnf  datastructures.cpp  datastructures.h  delaunator.hpp  localOptimizer.cpp  localOptimizer.h  main.cpp  main.cpp.old  reader.cpp  reader.h  simpleChecker.cpp  simpleChecker.h  solutionMaker.cpp  solutionMaker.h  solutionsFromOtherTeam.txt  testMain.cpp  testMain.h  visualise_solutions.py
LKHWin-3.0.5/: euro_night10-old.output  euro_night10.ouput  euro_night10.output  euro_night10.parea  euro_night10.tsp  euro_night10A.output  euro_night10A.par  euro_night15.output  euro_night15.par  euro_night15.parea  euro_night15A.output  euro_night15A.par  euro_night30.output  euro_night30.par  euro_night30.parea  euro_night40.output  euro_night40.par  euro_night40.parea  euro_night40.trial.output  euro_night40A.par  euro_night40_saved.output  lkh.sln  lkh.vcxproj  partial-tour-example.txt  partial-tour-example2.txt  pr2392.ouput  pr2392.par  preprocess_instance_LKH.py  readme.txt  test.txt  visualise_LKH_result.py
LKHWin-3.0.5/SRC/: Create_POPMUSIC_CandidateSet.c  Distance_SPECIAL.c  LineSegmentIntersection.c  Penalty_PAREA.c  PrintParameters.c  Rational.c  ReadParameters.c  ReadProblem.c  StatusReport.c
LKHWin-3.0.5/libdict-master/: GNUmakefile
datastructures/: convexhull.cpp  convexhull.h  line.cpp  line.h  lineseg.cpp  lineseg.h  point.cpp  point.h  polygon.cpp  polygon.h  quadtree.cpp  quadtree.h  quadtreepoints.cpp  quadtreepoints.h  triangle.cpp  triangle.h  vec.cpp  vec.h
datastructures/dcel/: dcel.cpp  dcel.h  face.cpp  face.h  halfedge.cpp  halfedge.h  (+2 more)
input/: test.txt
io/: reader.cpp  reader.h  visualiser.cpp  visualiser.h
output/: test.txt - 1556276191.ipe
res/: template.ipe
script/: runtests.py
solutions/: euro-night-0000010.ILP.maxopt_solution  euro-night-0000010.ILP.minopt_solution  euro-night-0000015.ILP.maxopt_solution  euro-night-0000015.ILP.minopt_solution  euro-night-0000020.ILP.maxopt_solution  euro-night-0000020.ILP.minopt_solution  london-0000010.ILP.maxopt_solution  london-0000010.ILP.minopt_solution  london-0000015.ILP.maxopt_solution  london-0000015.ILP.minopt_solution  london-0000020.ILP.maxopt_solution  london-0000020.ILP.minopt_solution  stars-0000010.ILP.maxopt_solution  stars-0000010.ILP.minopt_solution  stars-0000015.ILP.maxopt_solution  stars-0000015.ILP.minopt_solution  stars-0000020.ILP.maxopt_solution  stars-0000020.ILP.minopt_solution  uniform-0000010-1.ILP.maxopt_solution  uniform-0000010-1.ILP.minopt_solution  uniform-0000010-2.ILP.maxopt_solution  uniform-0000010-2.ILP.minopt_solution  uniform-0000015-1.ILP.maxopt_solution  uniform-0000015-1.ILP.minopt_solution  uniform-0000015-2.ILP.maxopt_solution  uniform-0000015-2.ILP.minopt_solution  uniform-0000020-1.ILP.maxopt_solution  uniform-0000020-1.ILP.minopt_solution  uniform-0000020-2.ILP.maxopt_solution  uniform-0000020-2.ILP.minopt_solution  us-night-0000010.ILP.maxopt_solution  us-night-0000010.ILP.minopt_solution  us-night-0000015.ILP.maxopt_solution  us-night-0000015.ILP.minopt_solution  us-night-0000020.ILP.maxopt_solution  us-night-0000020.ILP.minopt_solution
solvers/: exampleSolverUsage.cpp  exampleSolverUsage.h  solver.cpp  solver.h
tests/: convexhull_test.cpp  dcel_test.cpp  lineseg_test.cpp  polygon_test.cpp  quadtree_test.cpp  quadtreepoints_test.cpp  simpleChecker_test.cpp
(+32 files in other folders)
